# madargyuruzes

./: CMakeLists.txt  birds.cpp  birds.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
